Use padding top to avoid description too close to nav bar"

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,7 @@ video {
 }
 
 .description {
+    padding-top: 10%;
     float: right;
     width: 50%;
     height: 100%;
